--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.18.1",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
@@ -34,6 +36,7 @@
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
+    "recharts": "^3.0.2",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.10"
   },
